fdo#76356 : Docx file contianing chart in footer/header gets corrupted.

-  Docx file with chart in footer/header or .bin file referred in chart
       was getting corrupted.
    -  Embedded file for footer.xml was not grabbaged.
    -  .bin embedded files were not grab baged.
    -  Added grab bag support for both case.
    -  Added UT to check .bin files are grab baged properly.

Change-Id: I221e3867798fc2a3a42f6385d687e80b80a3678f